2006-09-29 setup.py: cleaned up setup logic - NN

2006-09-29 setup.py: check for required pygtk versions, fixes bug #1460783 - SC

===============================================================
2006-09-27 Released 0.87.6 at revision 2783

2006-09-24 Added line pointers to the Annotation code, and a pylab
           interface.  See matplotlib.text.Annotation,
           examples/annotation_demo.py and
           examples/annotation_demo_pylab.py - JDH

2006-09-18 mathtext2.py: The SVG backend now supports the same things that
           the AGG backend does. Fixed some bugs with rendering, and out of
           bounds errors in the AGG backend - ES. Changed the return values
           of math_parse_s_ft2font_svg to support lines (fractions etc.)

2006-09-17 Added an Annotation class to facilitate annotating objects
           and an examples file examples/annotation_demo.py.  I want
           to add dash support as in TextWithDash, but haven't decided
           yet whether inheriting from TextWithDash is the right base
           class or if another approach is needed - JDH

===============================================================
2006-09-05 Released 0.87.5 at revision 2761

2006-09-04 Added nxutils for some numeric add-on extension code --
		   specifically a better/more efficient inside polygon tester (see
		   unit/inside_poly_*.py) - JDH

2006-09-04 Made bitstream fonts the rc default - JDH

2006-08-31 Fixed alpha-handling bug in ColorConverter, affecting
           collections in general and contour/contourf in
           particular. - EF

2006-08-30 ft2font.cpp: Added draw_rect_filled method (now used by mathtext2
           to draw the fraction bar) to FT2Font - ES

2006-08-29 setupext.py: wrap calls to tk.getvar() with str(). On some
           systems, getvar returns a Tcl_Obj instead of a string - DSD

2006-08-28 mathtext2.py: Sub/superscripts can now be complex (i.e.
           fractions etc.). The demo is also updated - ES
